--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,12 @@
+body {
+  height: 320px;
+  width: 480px;
+  overflow: hidden;
+  text-align: center;
+  background: #4f234a;
+  background: linear-gradient(to bottom,  #4f234a 0%,#3f0030 100%);
+}
+
 #cameraPreview {
   position: absolute;
   top: 0;
@@ -5,6 +14,7 @@
   width: 480px;
   height: 320px;
   z-index: 1;
+  margin-left: 27px;
 }
 
 #cameraResult {
@@ -19,9 +29,10 @@
 }
 
 .btn {
-  width: 150px;
-  height: 45px;
-  line-height: 45px;
+  width: 160px;
+  height: 55px;
+  line-height: 55px;
+  opacity: 0.7;
   background-color: #fff;
   color: #4f234a;
   font-family: Arial;
@@ -34,15 +45,15 @@
 }
 
 .take-snapshot-btn {
-  top: 260px;
-  left: 10px;
+  top: 250px;
+  left: 40px;
   z-index: 2;
 }
 
 .clear-snapshot-btn {
   display: none;
-  top: 260px;
-  left: 260px;
+  top: 250px;
+  left: 278px;
   z-index: 4;
 }
 
